test/error/error.input061.zc
Expression is not a pointer to a struct/union on line 3
